fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ margin: 0;
 
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 425px) {
   .logo {
     width: 80vw;
   }
